Extract logic out for `Cleaner` class.